# octox-net

./: CLAUDE.md  Cargo.toml  Makefile  README.org  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  fmt.yml  test.yml
docs/: httpd.md  nc.md  nslookup.md  octox-tcp-implementation-plan.md  ping.md  smoltcp_guide.md  tcp-spec.md  tcp.md
scripts/: test_runner.sh
src/kernel/: buddy.rs  build.rs  condvar.rs  defs.rs  error.rs  exec.rs  file.rs  fs.rs  lib.rs  log.rs  main.rs  memlayout.rs  net.rs  param.rs  plic.rs  proc.rs  start.rs  sync.rs  syscall.rs  test_runner.rs  trap.rs  vm.rs
src/kernel/net/: arp.rs  device.rs  dns.rs  driver.rs  ethernet.rs  icmp.rs  interface.rs  ip.rs  protocol.rs  route.rs  socket.rs  tcp.rs  trace.rs  udp.rs  util.rs
src/kernel/net/driver/: loopback.rs  virtio_net.rs
src/kernel/net/tcp/: manager.rs  mod.rs  retransmit.rs  segment.rs  socket.rs  state.rs  storage.rs  timer.rs  wire.rs
src/mkfs/: main.rs
src/user/: Cargo.toml  build.rs
src/user/etc/: _index.html  _info.json  _note.txt  _style.css
src/user/lib/: lib.rs
src/user/lib/http/: error.rs  header.rs  method.rs  mime.rs  mod.rs  request.rs  response.rs  status.rs  version.rs
